# TCMT-Windows-client

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Project1.sln  Project1.vcxproj  README.md  TCMT.sln  TCMT.vcxproj  TCMT.vcxproj.filters  TODO.md
.claude/: settings.local.json
.github/workflows/: build.yml  sync-to-gitee-gitlab.yml
AvaloniaUI/: App.axaml  App.axaml.cs  AvaloniaUI.csproj  Program.cs  ViewLocator.cs
AvaloniaUI/Controls/: LineChart.cs
AvaloniaUI/Converters/: BoolInvertConverter.cs  ValueConverters.cs
AvaloniaUI/Models/: SystemInfo.cs
AvaloniaUI/Services/: SharedMemoryService.cs
AvaloniaUI/Services/IPCServices/: IPCMemoryReader.cs  IPCPipeClient.cs  IPCSchema.cs  IPCService.cs  IPCSystemInfoMapper.cs  IpcCommandSender.cs
AvaloniaUI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
AvaloniaUI/Views/: MainWindow.axaml
Project1/: Project1.vcxproj  Project1.vcxproj.filters
Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate
WPF-UI1/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
WPF-UI1/Services/: SharedMemoryService.cs
WPF-UI1/ViewModels/: MainWindowViewModel.cs
cmake/: Dependencies.cmake  Options.cmake  PDCurses.vcxproj  Platform.cmake
cmake/toolchains/: macos-clang.cmake  windows-msvc.cmake
docs/: docs_architecture_and_protocol_plan_v0.14_full_Version11.md  repo-directory.md  session-restore.md
docs/superpowers/specs/: 2026-04-18-disk-smart-tpm-design.md  2026-04-18-wpf-to-avalonia-migration.md  2026-04-19-tcmt-ui-fixes-design.md
src/: CMakeLists.txt  main.cpp  main_mac.cpp
src/TCMT-CLI/: DiagnosticsPipeClient.cpp  SharedMemoryReader.cpp  SharedMemoryReader.h  TCMT-CLI.vcxproj  main.cpp
src/core/: placeholder.cpp
src/core/Config/: ConfigManager.cpp  ConfigManager.h
src/core/DataStruct/: DataStruct.h  Producer.cpp  SharedMemoryManager.cpp  SharedMemoryManager.h  SharedMemoryManager_Windows.cpp  SharedMemoryManager_macOS.cpp
src/core/IPC/: IPCData.h  IPCServer.cpp  IPCServer.h  IpcCommandHandler.cpp  IpcCommandHandler.h  NamedPipeServer.cpp  NamedPipeServer.h  SharedMemoryManager.h  SharedMemoryManager_Windows.cpp  SharedMemoryManager_macOS.cpp
src/core/Platform/: Platform.cpp  Platform.h  Platform_Windows.cpp  Platform_macOS.cpp
src/core/Utils/: ComInitializationHelper.cpp  LibreHardwareMonitorBridge.cpp  LibreHardwareMonitorBridge.h  Logger.cpp  Logger.h  MotherboardInfo.cpp  TimeUtils.cpp  TimeUtils.h  TpmBridge.cpp  TpmBridge.h  WMIManager.cpp  WMIManager.h  WinUtils.cpp  WinUtils.h  stdafx.h
src/core/board/: BoardInfo.cpp  BoardInfo.h
src/core/common/: CrossPlatformCompat.h  CrossPlatformStubs.h  PlatformDefs.h
src/core/cpu/: CpuInfo.cpp  CpuInfo.h  CpuInfoCompat.cpp  CpuInfoCompat.h
src/core/disk/: DiskInfo.cpp  DiskInfo.h
src/core/factory/: InfoFactory.cpp
src/core/gpu/: GpuInfo.cpp  GpuInfo.h
src/core/history/: HistoryLogger.cpp  HistoryLogger.h
src/core/memory/: MemoryInfo.cpp  MemoryInfo.h
src/core/memory/gpu/: GpuInfo.cpp
src/core/network/: NetworkAdapter.cpp  NetworkAdapter.h
src/core/os/: OSInfo.cpp  OSInfo.h
src/core/power/: PowerInfo.cpp  PowerInfo.h
src/core/temperature/: TemperatureWrapper.cpp  TemperatureWrapper.h
src/core/tpm/: TpmInfo.cpp
src/core/usb/: USBInfo.cpp  USBInfo.h  UsbInfo.cpp  UsbInfo.h
src/tui/: LogBuffer.h  TuiApp.cpp  TuiApp.h
src/web/: WebServer.cpp  WebServer.h  dashboard.html
tests/: CMakeLists.txt  TCMT.Tests.vcxproj  packages.config  test_config.cpp  test_ipc.cpp
